# drivebrain_software_2026

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  README.md  build_script.sh  conanfile.py  dblog_2026-03-17_22-19-17.mcap  deploy_script.sh  docker-compose.yml  gencompilecommands.sh  requirements.txt  rpi_profile  test1.mcap  test_1.mcap
.devcontainer/: devcontainer.json
.github/workflows/: build_and_test.yml
config/: config.json  drivebrain_config.json
dbc/: hytech.dbc
drivebrain_app/include/: CANInverter.hpp  DrivebrainApp.hpp  HardwareFactory.hpp  drivebrain_app.hpp
drivebrain_app/src/: DrivebrainApp.cpp  drivebrain_app.cpp  main.cpp
drivebrain_comms/: CMakeLists.txt
drivebrain_comms/include/: AeroSenseComms.hpp  CANComms.hpp  DBServiceImpl.hpp  ETHRecvComms.hpp  ETHRecvComms.tpp  ETHSendComms.hpp  EkfTelemHelpers.hpp  EthernetComms.hpp  EthernetComms.tpp  EthernetReceiveComms.hpp  SimComms.hpp  VNComms.hpp  foxglove_server.hpp  hytech-fmon.h  hytech.h
drivebrain_comms/src/: AeroSenseComms.cpp  CANComms.cpp  ETHSendComms.cpp  EkfTelemHelpers.cpp  SimComms.cpp  StateEstimator.cpp  VNComms.cpp  foxglove_server.cpp  hytech.c
drivebrain_control/: CMakeLists.txt
drivebrain_control/include/: LoadCellTorqueController.hpp  LoadCellTorqueVectoringController.hpp  SimplePowerLimiter.hpp
drivebrain_control/src/: LoadCellTorqueController.cpp  LoadCellTorqueVectoringController.cpp  SimplePowerLimiter.cpp
drivebrain_core/: CMakeLists.txt  README.md
drivebrain_core/include/: Configurable.hpp  Controller.hpp  ControllerManager.hpp  ControllerManager.tpp  DrivebrainControllerInterface.hpp  DriverBus.hpp  Estimator.hpp  FoxgloveServer.hpp  InverterCmd.hpp  InverterSim.hpp  InveterInterface.hpp  JsonUtils.hpp  LapTracker.hpp  LidarOdometry.hpp  LidarSim.hpp  Literals.hpp  Loggable.hpp  MCAPLogger.hpp  MessageLogger.hpp  MsgLogger.hpp  SimStateReceiver.hpp  StateTracker.hpp  Telemetry.hpp  Utils.hpp  VehicleDataTypes.hpp
drivebrain_core/proto/foxglove/: FrameTransform.proto  PackedElementField.proto  PointCloud.proto  Pose.proto  Quaternion.proto  Vector3.proto
drivebrain_core/src/: Configurable.cpp  ControllerManager.tpp  DrivebrainControllerInterface.cpp  FoxgloveServer.cpp  InverterRealCmd.cpp  JsonFileHandler.cpp  LapTracker.cpp  LidarInterface.cpp  Logger.cpp  MCAPLogger.cpp  ProtobufUtils.cpp  StateTracker.cpp
drivebrain_estimation/: CMakeLists.txt
drivebrain_estimation/include/: LidarOdometry.hpp
drivebrain_estimation/include/htx_ekf/: ekf.hpp  ekf_manager.hpp  math_utils.hpp  state.hpp  types.hpp
drivebrain_estimation/src/: ekf.cpp  ekf_manager.cpp  math_utils.cpp
drivebrain_hardware/: CMakeLists.txt
drivebrain_hardware/include/: InverterSim.hpp  Lidar.hpp  LidarInterface.hpp  LidarOdometry.hpp  LidarSim.hpp  SimStateReceiver.hpp  SteeringInterface.hpp  SteeringSim.hpp
drivebrain_hardware/src/: InverterInterface.cpp  SteeringInterface.cpp
drivebrain_simple_hil_test/src/: debug_can.cpp  test_can_comms.cpp
hytech_proto/: CMakeLists.txt
hytech_proto/proto/: base_msgs.proto  hytech_msgs.proto
tests/: CMakeLists.txt  EthernetCommsTest.cpp  MCAPLoggerTest.cpp  test_vn.cpp
tests/replay/: README.md  mcap_replay.py
tests/scripts/: debug_can.cpp  run_ethernet_driver.cpp  run_mcap_logger.cpp  test_can_comms.cpp
tests/scripts/can/: test_can_comms.cpp
tests/test_configs/: fake_foxglove_params.json
vn_driver_lib/: CMakeLists.txt
